--- a/face-generator.ipynb
+++ b/face-generator.ipynb
@@ -1,6 +1,105 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h1>Import Necessary Libraries</h1>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "from tensorflow import keras\n",
+    "from tensorflow.keras.layers import Input, Reshape, Dense \n",
+    "from tensorflow.keras.layers import Flatten\n",
+    "from tensorflow.keras.layers import Activation\n",
+    "from tensorflow.keras.layers import LeakyReLU\n",
+    "from tensorflow.keras.layers import Conv2D ,Conv2DTranspose\n",
+    "from tensorflow.keras.models import Sequential, Model, load_model\n",
+    "from tensorflow.keras.optimizers import Adam\n",
+    "\n",
+    "import numpy as np\n",
+    "from PIL import Image\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "import os \n",
+    "import time\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using GPU\n"
+     ]
+    }
+   ],
+   "source": [
+    "gpus = tf.config.experimental.list_physical_devices('GPU')\n",
+    "if gpus:\n",
+    "    # Restrict TensorFlow to only use the GPU\n",
+    "    try:\n",
+    "        tf.config.experimental.set_visible_devices(gpus[0], 'GPU')\n",
+    "        print(\"Using GPU\")\n",
+    "    except RuntimeError as e:\n",
+    "        print(e)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h1>Preprocessing</h1>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_path = 'utkcropped/'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 23709 files belonging to 1 classes.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# load the dataset from the directory using a batch size of 128\n",
+    "train_ds = tf.keras.preprocessing.image_dataset_from_directory(\n",
+    "    data_path, \n",
+    "    label_mode=None, \n",
+    "    color_mode='rgb',\n",
+    "    batch_size=128,\n",
+    "    image_size=(128, 128),\n",
+    "    shuffle=True\n",
+    ")\n",
+    "\n",
+    "train_ds = train_ds.map(lambda x: (x / 127.5 - 1.)) # convert the dataset to a range of [-1,1]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
