--- a/face-generator.ipynb
+++ b/face-generator.ipynb
@@ -154,6 +154,103 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h1>Define Model</h1>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "latent_dim = 2048\n",
+    "intitializer = tf.keras.initializers.he_normal()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"functional_1\"\n",
+      "__________________________________________________________________________________________________\n",
+      "Layer (type)                    Output Shape         Param #     Connected to                     \n",
+      "==================================================================================================\n",
+      "encoder_input (InputLayer)      [(None, 128, 128, 3) 0                                            \n",
+      "__________________________________________________________________________________________________\n",
+      "input_1 (InputLayer)            multiple             0           encoder_input[0][0]              \n",
+      "__________________________________________________________________________________________________\n",
+      "conv2d (Conv2D)                 (None, 64, 64, 32)   896         input_1[1][0]                    \n",
+      "__________________________________________________________________________________________________\n",
+      "leaky_re_lu (LeakyReLU)         (None, 64, 64, 32)   0           conv2d[0][0]                     \n",
+      "__________________________________________________________________________________________________\n",
+      "conv2d_1 (Conv2D)               (None, 32, 32, 64)   18496       leaky_re_lu[0][0]                \n",
+      "__________________________________________________________________________________________________\n",
+      "batch_normalization (BatchNorma (None, 32, 32, 64)   256         conv2d_1[0][0]                   \n",
+      "__________________________________________________________________________________________________\n",
+      "leaky_re_lu_1 (LeakyReLU)       (None, 32, 32, 64)   0           batch_normalization[0][0]        \n",
+      "__________________________________________________________________________________________________\n",
+      "conv2d_2 (Conv2D)               (None, 16, 16, 128)  204928      leaky_re_lu_1[0][0]              \n",
+      "__________________________________________________________________________________________________\n",
+      "leaky_re_lu_2 (LeakyReLU)       (None, 16, 16, 128)  0           conv2d_2[0][0]                   \n",
+      "__________________________________________________________________________________________________\n",
+      "conv2d_3 (Conv2D)               (None, 8, 8, 128)    409728      leaky_re_lu_2[0][0]              \n",
+      "__________________________________________________________________________________________________\n",
+      "leaky_re_lu_3 (LeakyReLU)       (None, 8, 8, 128)    0           conv2d_3[0][0]                   \n",
+      "__________________________________________________________________________________________________\n",
+      "flatten (Flatten)               (None, 8192)         0           leaky_re_lu_3[0][0]              \n",
+      "__________________________________________________________________________________________________\n",
+      "dense (Dense)                   (None, 8192)         67117056    flatten[0][0]                    \n",
+      "__________________________________________________________________________________________________\n",
+      "dense_1 (Dense)                 (None, 2048)         16779264    dense[0][0]                      \n",
+      "__________________________________________________________________________________________________\n",
+      "dense_2 (Dense)                 (None, 2048)         16779264    dense[0][0]                      \n",
+      "==================================================================================================\n",
+      "Total params: 101,309,888\n",
+      "Trainable params: 101,309,760\n",
+      "Non-trainable params: 128\n",
+      "__________________________________________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "encoder_inputs = tf.keras.layers.Input(shape=(128, 128, 3),name=\"encoder_input\")\n",
+    "                      \n",
+    "x = tf.keras.layers.InputLayer(input_shape=(128,128,3))(encoder_inputs)\n",
+    "\n",
+    "#block - 1\n",
+    "x = tf.keras.layers.Conv2D(32,3,strides=(2,2),padding='same',kernel_initializer=intitializer)(x)\n",
+    "x = tf.keras.layers.LeakyReLU(alpha=0.2)(x) #64,64,32\n",
+    "\n",
+    "# block - 2\n",
+    "x = tf.keras.layers.Conv2D(64,3,strides=(2,2),padding='same',kernel_initializer=intitializer)(x)\n",
+    "x = tf.keras.layers.LeakyReLU(alpha=0.2)(x) #32,32,64\n",
+    "\n",
+    "# block - 3\n",
+    "x = tf.keras.layers.Conv2D(128,5,strides=(2,2),padding='same',kernel_initializer=intitializer)(x)\n",
+    "x = tf.keras.layers.LeakyReLU(alpha=0.2)(x) #16,16,128\n",
+    "\n",
+    "# block - 4\n",
+    "x = tf.keras.layers.Conv2D(128,5,strides=(2,2),padding='same',kernel_initializer=intitializer)(x)\n",
+    "x = tf.keras.layers.LeakyReLU(alpha=0.2)(x) #8,8,128\n",
+    "x = tf.keras.layers.Flatten()(x)\n",
+    "\n",
+    "x = tf.keras.layers.Dense(8*8*128,activation='relu',kernel_initializer=intitializer)(x)\n",
+    "z_mean = tf.keras.layers.Dense(latent_dim,activation='linear',kernel_initializer=intitializer)(x) # mean\n",
+    "z_log_var = tf.keras.layers.Dense(latent_dim,activation='linear',kernel_initializer=intitializer)(x) # log(variance)\n",
+    "\n",
+    "encoder = tf.keras.models.Model(encoder_inputs,[z_mean,z_log_var])\n",
+    "encoder.summary()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
