--- a/face-generator.ipynb
+++ b/face-generator.ipynb
@@ -252,6 +252,72 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"decoder_model\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "decoder_input (InputLayer)   [(None, 2048)]            0         \n",
+      "_________________________________________________________________\n",
+      "dense_3 (Dense)              (None, 8192)              16785408  \n",
+      "_________________________________________________________________\n",
+      "reshape (Reshape)            (None, 8, 8, 128)         0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_transpose (Conv2DTran (None, 16, 16, 128)       409728    \n",
+      "_________________________________________________________________\n",
+      "leaky_re_lu_4 (LeakyReLU)    (None, 16, 16, 128)       0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_transpose_1 (Conv2DTr (None, 32, 32, 64)        204864    \n",
+      "_________________________________________________________________\n",
+      "leaky_re_lu_5 (LeakyReLU)    (None, 32, 32, 64)        0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_transpose_2 (Conv2DTr (None, 64, 64, 32)        18464     \n",
+      "_________________________________________________________________\n",
+      "leaky_re_lu_6 (LeakyReLU)    (None, 64, 64, 32)        0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_transpose_3 (Conv2DTr (None, 128, 128, 3)       867       \n",
+      "=================================================================\n",
+      "Total params: 17,419,331\n",
+      "Trainable params: 17,419,331\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "decoder_input = tf.keras.layers.Input(shape=(latent_dim,), name=\"decoder_input\")\n",
+    "\n",
+    "#block - 1\n",
+    "x = tf.keras.layers.Dense(units=8*8*128, activation='relu',kernel_initializer=intitializer)(decoder_input)\n",
+    "x = tf.keras.layers.Reshape(target_shape=(8,8,128))(x)\n",
+    "\n",
+    "#block - 2\n",
+    "x = tf.keras.layers.Conv2DTranspose(128,5,strides=2,padding='same',kernel_initializer=intitializer)(x)\n",
+    "x = tf.keras.layers.LeakyReLU(alpha=0.2)(x) #16,16,128\n",
+    "\n",
+    "#block - 3\n",
+    "x = tf.keras.layers.Conv2DTranspose(64,5,strides=2,padding='same',kernel_initializer=intitializer)(x)\n",
+    "x = tf.keras.layers.LeakyReLU(alpha=0.2)(x) # 32,32,64\n",
+    "\n",
+    "#block - 4\n",
+    "x = tf.keras.layers.Conv2DTranspose(32,3,strides=2,padding='same',kernel_initializer=intitializer)(x)\n",
+    "x = tf.keras.layers.LeakyReLU(alpha=0.2)(x) # 64,64,32\n",
+    "\n",
+    "\n",
+    "decoder_img = tf.keras.layers.Conv2DTranspose(3,3,strides=2,padding='same',activation='tanh',kernel_initializer=intitializer)(x) # 128,128,3\n",
+    "\n",
+    "decoder = tf.keras.models.Model(decoder_input, decoder_img, name=\"decoder_model\")\n",
+    "decoder.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
