Added Train step

--- a/face-generator.ipynb
+++ b/face-generator.ipynb
@@ -318,6 +318,52 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CVAE(keras.Model):\n",
+    "\n",
+    "    def __init__(self,latent_dim,encoder,decoder,**kwargs):\n",
+    "        super(CVAE,self).__init__(**kwargs)\n",
+    "        self.encoder = encoder\n",
+    "        self.decoder = decoder\n",
+    "\n",
+    "    @tf.function\n",
+    "    def sampling(self,z_mean,z_log_variance):\n",
+    "        latent_shape = (tf.shape(z_mean)[0],tf.shape(z_mean)[1])\n",
+    "        eps = tf.random.normal(shape=latent_shape)\n",
+    "        return z_mean + tf.exp(0.5*z_log_variance)*eps\n",
+    "\n",
+    "    @tf.function\n",
+    "    def train_step(self,data):\n",
+    "\n",
+    "        if isinstance(data, tuple):\n",
+    "            data = data[0]\n",
+    "\n",
+    "        with tf.GradientTape() as tape:\n",
+    "            mean, logvar = encoder(data)\n",
+    "            z = self.sampling(mean,logvar)\n",
+    "            x_logit = self.decoder(z)\n",
+    "      \n",
+    "            reconstruction_loss = tf.reduce_mean(keras.losses.MSE(data, x_logit))\n",
+    "            reconstruction_loss*= 128*128\n",
+    "\n",
+    "            KL_div_loss = tf.math.reduce_mean(-0.5*tf.math.reduce_sum(1 + logvar - tf.square(mean) - tf.exp(logvar),axis=1))\n",
+    "\n",
+    "            loss = reconstruction_loss + KL_div_loss\n",
+    "\n",
+    "        grads = tape.gradient(loss, self.trainable_weights)\n",
+    "        self.optimizer.apply_gradients(zip(grads, self.trainable_weights))\n",
+    "        return {\n",
+    "              \"total loss\": loss,\n",
+    "              \"reconstruction loss\": reconstruction_loss,\n",
+    "              \"kl divergence loss\": KL_div_loss,\n",
+    "            }\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
