Normalized images to range [0,1]

--- a/face-generator.ipynb
+++ b/face-generator.ipynb
@@ -167,7 +167,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_ds = train_ds.map(lambda x: (x / 127.5 - 1.)) # convert the dataset to a range of [-1,1]"
+    "train_ds = train_ds.map(lambda x: (x / 255.0)) # convert the dataset to a range of [0,1]"
    ]
   },
   {
@@ -490,13 +490,7 @@
       "186/186 [==============================] - 39s 211ms/step - total loss: 521.5731 - reconstruction loss: 412.8149 - kl divergence loss: 108.7582\n",
       "Epoch 52/200\n",
       "186/186 [==============================] - 40s 214ms/step - total loss: 520.5642 - reconstruction loss: 412.1214 - kl divergence loss: 108.4428\n",
-      "Epoch 53/200\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 53/200\n",
       "186/186 [==============================] - 40s 213ms/step - total loss: 520.2296 - reconstruction loss: 411.7232 - kl divergence loss: 108.5064\n",
       "Epoch 54/200\n",
       "186/186 [==============================] - 40s 215ms/step - total loss: 516.5924 - reconstruction loss: 408.2751 - kl divergence loss: 108.3172\n",
@@ -708,13 +702,7 @@
       "186/186 [==============================] - 40s 215ms/step - total loss: 436.6926 - reconstruction loss: 332.1572 - kl divergence loss: 104.5354\n",
       "Epoch 155/200\n",
       "186/186 [==============================] - 40s 216ms/step - total loss: 435.5938 - reconstruction loss: 331.1359 - kl divergence loss: 104.4579\n",
-      "Epoch 156/200\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 156/200\n",
       "186/186 [==============================] - 40s 216ms/step - total loss: 434.9646 - reconstruction loss: 330.3951 - kl divergence loss: 104.5694\n",
       "Epoch 157/200\n",
       "186/186 [==============================] - 40s 215ms/step - total loss: 435.0660 - reconstruction loss: 330.4854 - kl divergence loss: 104.5806\n",
