Changed activation of final layer of decoder to sigmoid

--- a/face-generator.ipynb
+++ b/face-generator.ipynb
@@ -325,7 +325,7 @@
     "x = tf.keras.layers.LeakyReLU(alpha=0.2)(x) # 64,64,32\n",
     "\n",
     "\n",
-    "decoder_img = tf.keras.layers.Conv2DTranspose(3,3,strides=2,padding='same',activation='tanh',kernel_initializer=intitializer)(x) # 128,128,3\n",
+    "decoder_img = tf.keras.layers.Conv2DTranspose(3,3,strides=2,padding='same',activation='sigmoid',kernel_initializer=intitializer)(x) # 128,128,3\n",
     "\n",
     "decoder = tf.keras.models.Model(decoder_input, decoder_img, name=\"decoder_model\")\n",
     "decoder.summary()"
