--- a/face-generator.ipynb
+++ b/face-generator.ipynb
@@ -609,13 +609,13 @@
    ],
    "source": [
     "with tf.device('/GPU:0'):\n",
-    "    #cvae = CVAE(latent_dim,encoder,decoder)\n",
+    "    cvae = CVAE(latent_dim,encoder,decoder)\n",
     "    \n",
     "    #cvae.encoder.load_weights('Weights/encoder_weights.h5')\n",
     "    #cvae.decoder.load_weights('Weights/decoder_weights.h5')\n",
-    "    # Uncomment above two lines in case you are training from saved weights\n",
-    "    # Trained for 200\n",
-    "    #cvae.compile(optimizer=tf.keras.optimizers.Adam(learning_rate=0.0001))\n",
+    "    # Uncomment above two lines in case you are continuing training from saved weights\n",
+    "    \n",
+    "    cvae.compile(optimizer=tf.keras.optimizers.Adam(learning_rate=0.0001))\n",
     "    history = cvae.fit(train_ds, epochs=100, batch_size=128)"
    ]
   },
@@ -630,11 +630,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Generate random faces"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "cvae.encoder.save_weights(\"Weights/encoder_weights.h5\")\n",
+    "cvae.decoder.save_weights(\"Weights/decoder_weights.h5\")"
+   ]
   }
  ],
  "metadata": {
