Added extra comments

--- a/face-generator.ipynb
+++ b/face-generator.ipynb
@@ -195,6 +195,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Define encoder"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -269,6 +276,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Define decoder"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -332,6 +346,21 @@
     "\n",
     "decoder = tf.keras.models.Model(decoder_input, decoder_img, name=\"decoder_model\")\n",
     "decoder.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Define the main Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since the variational autoencoder is different from standard feed forward CNN's, we can overwrite the training step by\n",
+    "subclassing the keras `Model` class"
    ]
   },
   {
