Added comments in md

--- a/face-generator.ipynb
+++ b/face-generator.ipynb
@@ -639,6 +639,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# save weights into a .h5 file\n",
     "cvae.encoder.save_weights(\"Weights/encoder_weights_manual.h5\")\n",
     "cvae.decoder.save_weights(\"Weights/decoder_weights_manual.h5\")"
    ]
@@ -659,6 +660,13 @@
     "cvae = CVAE(latent_dim,encoder,decoder)\n",
     "cvae.encoder.load_weights(\"Weights/encoder_weights.h5\")\n",
     "cvae.decoder.load_weights(\"Weights/decoder_weights.h5\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `generate_faces()` function below feeds 64 vectors sampled from a normal distribution to generate 64 random faces"
    ]
   },
   {
