Added extra comments

--- a/face-generator.ipynb
+++ b/face-generator.ipynb
@@ -57,23 +57,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(gpus)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -82,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,6 +175,13 @@
    "source": [
     "latent_dim = 2048\n",
     "intitializer = tf.keras.initializers.he_normal()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since the encoder gives two outputs, we will be using the keras functional API to achieve this"
    ]
   },
   {
@@ -378,24 +368,25 @@
     "    \n",
     "    \n",
     "    def sampling(self,z_mean,z_log_variance):\n",
+    "        \"\"\"\n",
+    "        This function helps achieve the reparametrization trick to allow backpropagation.\n",
+    "        \"\"\"\n",
     "        latent_shape = (tf.shape(z_mean)[0],tf.shape(z_mean)[1])\n",
     "        eps = tf.random.normal(shape=latent_shape)\n",
-    "        return z_mean + tf.exp(0.5*z_log_variance)*eps\n",
+    "        return z_mean + tf.exp(0.5*z_log_variance)*eps # z = μ + σ⊙∈\n",
     "\n",
     "    @tf.function\n",
     "    def train_step(self,data):\n",
     "\n",
-    "        if isinstance(data, tuple):\n",
-    "            data = data[0]\n",
-    "\n",
-    "        with tf.GradientTape() as tape:\n",
+    "        with tf.GradientTape() as tape: # We can specify for what the gradients must be computed using GradientTape()\n",
     "            mean, logvar = encoder(data)\n",
     "            z = self.sampling(mean,logvar)\n",
     "            x_logit = self.decoder(z)\n",
     "      \n",
     "            reconstruction_loss = tf.reduce_mean(keras.losses.MSE(data, x_logit))\n",
     "            reconstruction_loss*= 128*128\n",
-    "\n",
+    "            \n",
+    "            # This is the KL divergence loss term which forces the latent space to be continuos.\n",
     "            KL_div_loss = tf.math.reduce_mean(-0.5*tf.math.reduce_sum(1 + logvar - tf.square(mean) - tf.exp(logvar),axis=1))\n",
     "\n",
     "            loss = reconstruction_loss + KL_div_loss\n",
@@ -666,7 +657,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `generate_faces()` function below feeds 64 vectors sampled from a normal distribution to generate 64 random faces"
+    "The `generate_faces()` function below feeds 64 vectors sampled from a standard normal distribution to generate 64 random faces"
    ]
   },
   {
