--- a/face-generator.ipynb
+++ b/face-generator.ipynb
@@ -25,10 +25,8 @@
     "\n",
     "import numpy as np\n",
     "from PIL import Image\n",
-    "from tqdm import tqdm\n",
     "\n",
     "import os \n",
-    "import time\n",
     "import matplotlib.pyplot as plt"
    ]
   },
@@ -48,7 +46,7 @@
    "source": [
     "gpus = tf.config.experimental.list_physical_devices('GPU')\n",
     "if gpus:\n",
-    "    # Restrict TensorFlow to only use the GPU\n",
+    "    # Restrict TensorFlow to only use the GPU (Run this for only training on GPU)\n",
     "    try:\n",
     "        tf.config.experimental.set_visible_devices(gpus[0], 'GPU')\n",
     "        print(\"Using GPU\")\n",
@@ -157,7 +155,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_ds = train_ds.map(lambda x: (x / 255.0)) # convert the dataset to a range of [0,1]"
+    "# convert the dataset to a range of [0,1]\n",
+    "train_ds = train_ds.map(lambda x: (x / 255.0))"
    ]
   },
   {
@@ -174,6 +173,8 @@
    "outputs": [],
    "source": [
     "latent_dim = 2048\n",
+    "\n",
+    "#Define the weights initializer\n",
     "intitializer = tf.keras.initializers.he_normal()"
    ]
   },
@@ -241,25 +242,32 @@
    ],
    "source": [
     "encoder_inputs = tf.keras.layers.Input(shape=(128, 128, 3),name=\"encoder_input\")\n",
-    "                      \n",
     "x = tf.keras.layers.InputLayer(input_shape=(128,128,3))(encoder_inputs)\n",
     "\n",
+    "# Block - 1\n",
     "x = tf.keras.layers.Conv2D(32,3,strides=(2,2),padding='same',kernel_initializer=intitializer)(x)\n",
-    "x = tf.keras.layers.LeakyReLU(alpha=0.2)(x) #64,64,32\n",
+    "x = tf.keras.layers.LeakyReLU(alpha=0.2)(x) # Resulting shape = (64,64,32)\n",
     "\n",
+    "# Block - 2\n",
     "x = tf.keras.layers.Conv2D(64,3,strides=(2,2),padding='same',kernel_initializer=intitializer)(x)\n",
-    "x = tf.keras.layers.LeakyReLU(alpha=0.2)(x) #32,32,64\n",
-    " \n",
-    "x = tf.keras.layers.Conv2D(128,5,strides=(2,2),padding='same',kernel_initializer=intitializer)(x)\n",
-    "x = tf.keras.layers.LeakyReLU(alpha=0.2)(x) #16,16,128\n",
+    "x = tf.keras.layers.LeakyReLU(alpha=0.2)(x) # Resulting shape = (32,32,64)\n",
     "\n",
+    "# Block - 3\n",
     "x = tf.keras.layers.Conv2D(128,5,strides=(2,2),padding='same',kernel_initializer=intitializer)(x)\n",
-    "x = tf.keras.layers.LeakyReLU(alpha=0.2)(x) #8,8,128\n",
+    "x = tf.keras.layers.LeakyReLU(alpha=0.2)(x) # Resulting shape = (16,16,128)\n",
+    "\n",
+    "# Block - 4\n",
+    "x = tf.keras.layers.Conv2D(128,5,strides=(2,2),padding='same',kernel_initializer=intitializer)(x)\n",
+    "x = tf.keras.layers.LeakyReLU(alpha=0.2)(x) # Resulting shape = (8,8,128)\n",
     "x = tf.keras.layers.Flatten()(x)\n",
-    "\n",
     "x = tf.keras.layers.Dense(8*8*128,activation='relu',kernel_initializer=intitializer)(x)\n",
-    "z_mean = tf.keras.layers.Dense(latent_dim,activation='linear',kernel_initializer=intitializer)(x) # mean\n",
-    "z_log_var = tf.keras.layers.Dense(latent_dim,activation='linear',kernel_initializer=intitializer)(x) # log(variance)\n",
+    "\n",
+    "# Output Block (Return the mean and log of variance)\n",
+    "# mean\n",
+    "z_mean = tf.keras.layers.Dense(latent_dim,activation='linear',kernel_initializer=intitializer)(x)\n",
+    "\n",
+    "# log(variance)\n",
+    "z_log_var = tf.keras.layers.Dense(latent_dim,activation='linear',kernel_initializer=intitializer)(x)\n",
     "\n",
     "encoder = tf.keras.models.Model(encoder_inputs,[z_mean,z_log_var])\n",
     "encoder.summary()"
@@ -315,23 +323,23 @@
    "source": [
     "decoder_input = tf.keras.layers.Input(shape=(latent_dim,), name=\"decoder_input\")\n",
     "\n",
+    "# Block - 1\n",
     "x = tf.keras.layers.Dense(units=8*8*128, activation='relu',kernel_initializer=intitializer)(decoder_input)\n",
-    "x = tf.keras.layers.Reshape(target_shape=(8,8,128))(x)\n",
+    "x = tf.keras.layers.Reshape(target_shape=(8,8,128))(x) # Resulting shape = (8,8,128)\n",
     "\n",
-    "\n",
+    "# Block - 2\n",
     "x = tf.keras.layers.Conv2DTranspose(128,5,strides=2,padding='same',kernel_initializer=intitializer)(x)\n",
-    "#x = tf.keras.layers.BatchNormalization()(x)\n",
-    "x = tf.keras.layers.LeakyReLU(alpha=0.2)(x) #16,16,128\n",
+    "x = tf.keras.layers.LeakyReLU(alpha=0.2)(x) # Resulting shape = (16,16,128)\n",
     "\n",
+    "# Block - 3\n",
     "x = tf.keras.layers.Conv2DTranspose(64,5,strides=2,padding='same',kernel_initializer=intitializer)(x)\n",
-    "#x = tf.keras.layers.BatchNormalization()(x)\n",
-    "x = tf.keras.layers.LeakyReLU(alpha=0.2)(x) # 32,32,64\n",
+    "x = tf.keras.layers.LeakyReLU(alpha=0.2)(x) # Resulting shape = (32,32,64)\n",
     "\n",
+    "# Block - 4\n",
     "x = tf.keras.layers.Conv2DTranspose(32,3,strides=2,padding='same',kernel_initializer=intitializer)(x)\n",
-    "#x = tf.keras.layers.BatchNormalization()(x)\n",
-    "x = tf.keras.layers.LeakyReLU(alpha=0.2)(x) # 64,64,32\n",
+    "x = tf.keras.layers.LeakyReLU(alpha=0.2)(x) # Resulting shape = (64,64,32)\n",
     "\n",
-    "\n",
+    "# Output Block: resulting shape = (128,128,3)\n",
     "decoder_img = tf.keras.layers.Conv2DTranspose(3,3,strides=2,padding='same',activation='sigmoid',kernel_initializer=intitializer)(x) # 128,128,3\n",
     "\n",
     "decoder = tf.keras.models.Model(decoder_input, decoder_img, name=\"decoder_model\")\n",
@@ -366,23 +374,31 @@
     "        self.encoder = encoder\n",
     "        self.decoder = decoder\n",
     "    \n",
-    "    \n",
+    "    # This function helps achieve the reparametrization trick to allow backpropagation.\n",
     "    def sampling(self,z_mean,z_log_variance):\n",
-    "        \"\"\"\n",
-    "        This function helps achieve the reparametrization trick to allow backpropagation.\n",
-    "        \"\"\"\n",
+    "        \n",
     "        latent_shape = (tf.shape(z_mean)[0],tf.shape(z_mean)[1])\n",
     "        eps = tf.random.normal(shape=latent_shape)\n",
-    "        return z_mean + tf.exp(0.5*z_log_variance)*eps # z = μ + σ⊙∈\n",
+    "        \n",
+    "        # z = μ + σ⊙∈\n",
+    "        return z_mean + tf.exp(0.5*z_log_variance)*eps\n",
     "\n",
     "    @tf.function\n",
     "    def train_step(self,data):\n",
     "\n",
-    "        with tf.GradientTape() as tape: # We can specify for what the gradients must be computed using GradientTape()\n",
+    "        # We can specify for what the gradients must be computed using GradientTape()\n",
+    "        with tf.GradientTape() as tape:\n",
+    "            \n",
+    "            # encoder returns mean and log(variance)\n",
     "            mean, logvar = encoder(data)\n",
+    "            \n",
+    "            # Sample from the distribution given by mean,logvar\n",
     "            z = self.sampling(mean,logvar)\n",
+    "            \n",
+    "            # Reconstruct the image using the decoder\n",
     "            x_logit = self.decoder(z)\n",
-    "      \n",
+    "            \n",
+    "            # Define the reconstruction loss\n",
     "            reconstruction_loss = tf.reduce_mean(keras.losses.MSE(data, x_logit))\n",
     "            reconstruction_loss*= 128*128\n",
     "            \n",
@@ -393,6 +409,7 @@
     "\n",
     "        grads = tape.gradient(loss, self.trainable_weights)\n",
     "        self.optimizer.apply_gradients(zip(grads, self.trainable_weights))\n",
+    "        \n",
     "        return {\n",
     "              \"total loss\": loss,\n",
     "              \"reconstruction loss\": reconstruction_loss,\n",
@@ -673,6 +690,7 @@
     "    fig = plt.figure(figsize=(12,12))\n",
     "    for i in range(generated_images.shape[0]):\n",
     "        plt.subplot(8,8,i+1)\n",
+    "        # No need to convert to [0,255] as plt.imshow() takes care of this\n",
     "        plt.imshow((generated_images[i,:,:,:]))\n",
     "        plt.axis(\"off\")\n",
     "    plt.show()"
