Added extra comment

--- a/face-generator.ipynb
+++ b/face-generator.ipynb
@@ -638,7 +638,10 @@
     "    # Uncomment above two lines in case you are continuing training from saved weights\n",
     "    \n",
     "    cvae.compile(optimizer=tf.keras.optimizers.Adam(learning_rate=0.0001))\n",
-    "    history = cvae.fit(train_ds, epochs=100, batch_size=128)"
+    "    history = cvae.fit(train_ds, epochs=100, batch_size=128)\n",
+    "    \n",
+    "    # Note: The model was trained for 200 epochs once and then continued with 100 epochs from the previous state.\n",
+    "    # Only the history of the last 100 are shown "
    ]
   },
   {
