--- a/face-generator.ipynb
+++ b/face-generator.ipynb
@@ -122,7 +122,14 @@
    ],
    "source": [
     "def plot_batch(batch, rows, cols):\n",
+    "    \"\"\"\n",
+    "    helper function to plot and visualize images in dataset as a grid\n",
     "    \n",
+    "    Parameters:\n",
+    "        batch: batch of images from training data\n",
+    "        rows: number of rows in grid\n",
+    "        cols: number of columns in grid\n",
+    "    \"\"\"   \n",
     "    index = 0\n",
     "    face_size = batch.shape[1]\n",
     "    width = face_size * cols\n",
@@ -368,14 +375,29 @@
    "outputs": [],
    "source": [
     "class CVAE(keras.Model):\n",
+    "    \"\"\"Subclass of keras.Model to specify custom training step\"\"\"\n",
     "\n",
     "    def __init__(self,latent_dim,encoder,decoder,**kwargs):\n",
+    "        \"\"\"\n",
+    "        Parameters:\n",
+    "            encoder: keras model representing encoder\n",
+    "            decoder: keras model representing decoder\n",
+    "        \"\"\"\n",
     "        super(CVAE,self).__init__(**kwargs)\n",
     "        self.encoder = encoder\n",
     "        self.decoder = decoder\n",
     "    \n",
-    "    # This function helps achieve the reparametrization trick to allow backpropagation.\n",
     "    def sampling(self,z_mean,z_log_variance):\n",
+    "        \"\"\"\n",
+    "        This function helps achieve the reparametrization trick to allow backpropagation.\n",
+    "        \n",
+    "        Parameters:\n",
+    "            z_mean: mean vector for the multivariate distribution.\n",
+    "            z_log_variance: vector containing the corresponding logarithms of the variances for the multivariate distribution.\n",
+    "        \n",
+    "        Returns:\n",
+    "            sampled vector from the multivariate distribution defined by z_mean and z_log_variance\n",
+    "        \"\"\"\n",
     "        \n",
     "        latent_shape = (tf.shape(z_mean)[0],tf.shape(z_mean)[1])\n",
     "        eps = tf.random.normal(shape=latent_shape)\n",
@@ -385,6 +407,17 @@
     "\n",
     "    @tf.function\n",
     "    def train_step(self,data):\n",
+    "        \"\"\"\n",
+    "        Computes one forward pass and returns the corresponding losses\n",
+    "        \n",
+    "        Parameters:\n",
+    "            data: batch from training data\n",
+    "            \n",
+    "        Returns:\n",
+    "            loss: combination of KL divergence loss and recosntruction loss\n",
+    "            reconstruction_loss: reconstruction loss associated with the network\n",
+    "            KL_div_loss: KL divergence loss associated with the network\n",
+    "        \"\"\"\n",
     "\n",
     "        # We can specify for what the gradients must be computed using GradientTape()\n",
     "        with tf.GradientTape() as tape:\n",
@@ -687,6 +720,7 @@
    "outputs": [],
    "source": [
     "def generate_faces():\n",
+    "    \"\"\"This function generates a grid of random faces\"\"\"\n",
     "    noise = tf.keras.backend.random_normal(shape=(64,latent_dim))\n",
     "    generated_images = cvae.decoder.predict(noise)\n",
     "\n",
